fixed errors de la logica del comments
